src/test/deca/context/invalid/operations/arithmetic/invalid_arithmetic_op_minus_bool_bool.deca
// Description:
//    test invalid operation MINUS between bool and bool
//    Test rule 3.33
//
// [Begin Result]
//invalid_arithmetic_op_minus_bool_bool.deca:13:15: Unsupported operation '-' between types boolean and boolean. Operation '-' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print(true - false);
}